2015-01-23  Richard Biener  <rguenther@suse.de>

	PR testsuite/63439
	* gcc.dg/vect/vect-33.c: Adjust target selectors for v16qi
	vectorization on vect64 targets.

2015-01-23  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/60922
	* gfortran.dg/class_allocate_17.f90: New.

2015-01-23  Tobias Burnus  <burnus@net-b.de>

	PR fortran/64726
	* gfortran.dg/goacc/combined_loop.f90: New.

2015-01-22  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/61933
	* gfortran.dg/make_unit.f90: New test.

2015-01-22  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/61933
	* gfortran.dg/negative_unit_int8.f: Update.

2015-01-22  Jeff Law  <law@redhat.com>

	PR target/52076
	* gcc.target/m68k/pr52076-1.c: New test.
	* gcc.target/m68k/pr52076-2.c: New test.

2015-01-22  Richard Biener  <rguenther@suse.de>

	PR middle-end/64728
	* gcc.dg/torture/pr64728.c: New testcase.

2015-22-01  Uros Bizjak  <ubizjak@gmail.com>

	PR target/64688
	* g++.dg/pr64688.C: New test.

2015-01-22  Ilya Enkovich  <ilya.enkovich@intel.com>

	* gcc.target/i386/chkp-always_inline.c (f1): Make static
	to avoid errors with -fpic.

2015-01-22  Richard Biener  <rguenther@suse.de>

	PR libstdc++/64535
	* g++.old-deja/g++.eh/badalloc1.C: Adjust.

2015-01-21  Segher Boessenkool  <segher@kernel.crashing.org>

	PR rtl-optimization/64682
	* gcc.c-torture/execute/pr64682.c: New file.

2015-01-21  Jakub Jelinek  <jakub@redhat.com>

	PR debug/64511
	* gcc.dg/pr64511.c: New test.

	PR rtl-optimization/62078
	* g++.dg/opt/pr62078.C: New test.

	PR c/63307
	* c-c++-common/cilk-plus/CK/pr63307.c: New test.

2015-01-21  Thomas Koenig  <tkoenig@netcologne.de>

	PR fortran/57023
	* gfortran.dg/internal_pack_15.f90:  New test.

2015-01-21  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* gcc/testsuite/c-c++-common/tsan/step.c: New testcase.

2015-01-21  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vqdmull_n.c: New file.

2015-01-21  Christophe Lyon  <christophe.lyon@linaro.org>
